2011-12-7
add KindleNote -->as Notepad can't edit text file that have more than 3099 character
add keystore
change editor dir from Notepad to KindleNote
put try.py and test.sh into git

2011-12-5
mark ch2duokan as experiment
edit sync.sh --> add remove spam
edit README
correct format of control.sh

2011-12-4
add switch system to duokan lite
edit finance.py --> temple is user-part string
add changelog