@@ -3,6 +3,8 @@ add KindleNote -->as Notepad can't edit text file that have more than 3099 chara
 add keystore
 change editor dir from Notepad to KindleNote
 put try.py and test.sh into git
+improve sync.sh
+improve mplayer control.sh and createlist scripts
 
 2011-12-5
 mark ch2duokan as experiment
